# light-v1

./: LICENSE.md  README.md  pyproject.toml
examples/: README.md  job_slurm.sh  post_compute_discrete_samples.py  post_plotting.py
examples/notebooks/: 01_make_redshift_catalog.ipynb  02_make_launch_file.ipynb
src/examples/: main_analysis_gibbs.py
src/examples/notebooks/: 01_make_redshift_catalog.ipynb
src/light/astrophysics/: luminosity.py
src/light/catalog/: catalog.py
src/light/cosmology/: cosmology.py
src/light/field/: field.py  power_spectrum.py
src/light/numpyro_utils/: convolution.py  custom_autoguide_list.py  custom_distributions.py  custom_gibbs.py  custom_transformations.py  gibbs_samping.py  hypergeometric_function.py  models.py  pack_fftn_values.py  priors.py  sampling_utils.py
src/light/utils/: conventions.py  helper_functions.py  jax_utils.py  plotting.py  redshift_uncertainties.py  result.py
tests/: conftest.py  test_cosmo_module.py  test_field.py  test_field_for_varying_size.py  test_integrator.py  test_magnitude_distribution.py  test_packing_fft_values.py  test_set_box_volume.py
